# ssg-tether-capture

./: .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  packaging-test.yml  pr.yaml  release.yml
assets/capture_plans/: example_plan.json
assets/datasets/: README.md
assets/example_capture_plans/: example_plan.json
assets/logo/: icon.icns
assets/models/: broken_satellite.glb
assets/shaders/: map_eci_points.wgsl  orbital_eci.wgsl
assets/textures/: 8k_stars_uastc.ktx2
demo/functions/src/: main.rs
docs_site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  versions.json
docs_site/docs/api-reference/: resources.md  systems.md  ui.md
docs_site/docs/architecture/: overview.md  plugins.md
docs_site/docs/concepts/: camera-system.md  capture-log.md  orbital-mechanics.md  time-warp.md
docs_site/docs/contributing/: cicd-workflows.md  development.md  release-workflow.md  testing.md  versioned-docs-policy.md
docs_site/docs/getting-started/: install-linux.md  install-macos.md  install-windows.md  introduction.md  running-the-app.md
docs_site/src/components/HomepageFeatures/: index.tsx
docs_site/src/css/: custom.css
docs_site/src/pages/: index.tsx
docs_site/versioned_docs/version-0.2.0-beta.1/api-reference/: components.md  resources.md  ui.md
docs_site/versioned_docs/version-0.2.0-beta.1/architecture/: overview.md  plugins.md
docs_site/versioned_docs/version-0.2.0-beta.1/concepts/: tether-system.md
docs_site/versioned_docs/version-0.2.0-beta.1/getting-started/: introduction.md  prerequisites.md
docs_site/versioned_docs/version-0.2.0/api-reference/: components.md
docs_site/versioned_docs/version-0.2.0/architecture/: overview.md  render-layers.md
docs_site/versioned_docs/version-0.2.0/concepts/: floating-origin.md  time-warp.md
docs_site/versioned_docs/version-0.2.0/contributing/: development.md
docs_site/versioned_docs/version-0.2.0/getting-started/: introduction.md  prerequisites.md  running-the-app.md
reference/: tether_dynamics.m
scripts/: do_release.sh  install_windows_prereqs.bat  install_windows_prereqs.ps1  post_release.sh  prune_versioned_docs.sh  test_windows_prereqs_and_build.bat  test_windows_prereqs_and_build.ps1  verify_release_pr.sh
src/: constants.rs  lib.rs  main.rs
src/components/: capture_components.rs  dev_components.rs  mod.rs  orbit.rs  orbit_camera.rs  user_interface.rs
src/plugins/: gpu_compute.rs  mod.rs  orbit_camera.rs  orbital_mechanics.rs  post_processing_test.rs
src/resources/: capture_log.rs  capture_plan_form.rs  capture_plans.rs  celestials.rs  data_collection.rs  devices.rs  mod.rs  new_capture_plan_form.rs  orbital_cache.rs  orbital_entities.rs  settings.rs  space_catalog.rs  time_warp.rs  working_directory.rs  world_time.rs
src/systems/: capture_algorithms.rs  gizmos.rs  mod.rs  orbit_camera.rs  physics.rs  propagation.rs  setup.rs  spawners.rs  user_input.rs  user_interface.rs
src/tests/: integration_tests.rs  mod.rs  unit_tests.rs
src/ui/: egui.rs  egui_terminal.rs  events.rs  mod.rs  plugin.rs  state.rs  theme.rs
src/ui/screens/: capture_plan.rs  home.rs  mod.rs  new_capture_plan.rs  project_detail.rs  working_directory_setup.rs
src/ui/widgets/: input_field.rs  mod.rs  terminal_log.rs
wix/: LICENSE.rtf  SSG.wixproj  main.wxs  main_v7.wix
